--- a/information-about-me.html
+++ b/information-about-me.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>More Information</title>
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/logo.jpg" type="images/x-icon">
 </head>
 <body>
-    <div>
+    <header class="header-informationaboutme">
         <h1 class="informationaboutme">MORE INFORMATION ABOUT ME</h1>
-        <h1 class="dots"> &#8230; </h1>
-    </div>
+        <p class="dots"> &#8230; </p>
+    </header>
     <div>
         <h2>Why I decided to become a programmer?</h2>
     </div>
@@ -24,15 +25,11 @@
            but I liked programming. Then I went to college and now I'm studying there.</p>
     </div>
     <div>
+        <p class="dots">&#8230;</p>
         <p>
-            <h1 class="dots">&#8230;</h1>
+            <img src="img/dudych-near-airport.jpg" width="400 px" height="300 px" alt="dudych-near-airport">
         </p>
-        <p>
-            <img src="img/nazar3.jpg" width="400 px" height="300 px" alt="myphoto3">
-        </p>
-        <p>
-            <h1 class="dots">&#8230;</h1>
-        </p>
+        <p class="dots">&#8230;</p>
     </div>
     <div>
         <h2>My Interests</h2>
@@ -43,15 +40,11 @@
         <br>movies and shows. My favorite series are Vikings.</p>
     </div>
     <div>
+        <p class="dots">&#8230;</p>
         <p>
-            <h1 class="dots">&#8230;</h1>
+            <img src="img/dudych-in-kiev.jpg" width="400px" height="400px" alt="dudych-in-kiev">
         </p>
-        <p>
-            <img src="img/nazar4.jpg" width="400px" height="400px" alt="myphoto4">
-        </p>
-        <p>
-            <h1 class="dots">&#8230;</h1>
-        </p>
+        <p class="dots">&#8230;</p>
     </div>
 </body>
 </html>
