--- a/index.html
+++ b/index.html
@@ -5,41 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Web Site</title>
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/logo.jpg" type="images/x-icon">
 </head>
 <body>
-    <div class="header">
+    <header>
         <div class="header-text" >
             <h1>MY WEBSITE</h1>
             <h3>Hello, I'm Nazar. This is my web site.</h3>
         </div>
-    </div>
+    </header>
     <div class="aboutme">
         <div class="abouttext">
             <h2>ABOUT ME</h2>
-            <h1 class="dots">&#8230;</h1>
+            <p class="dots">&#8230;</p>
             <p>I live in Lviv. I'm studying at the Technological College.
             <br>In the future, I want to become a web developer.</p>
             <p>I wanted to become a programmer because I was 
             <br>interested in this profession ...</p>
-            <button class="button"><a href="informationaboutme.html">More information</a></button>
+            <button class="button"><a href="information-about-me.html">More information</a></button>
         </div>    
     </div>
     <div class="myphotos">
         <div class="photostext">
             <h2>MY PHOTOS</h2>
+            <p class="dots">&#8230;</p>
             <p>
-                <h1 class="dots">&#8230;</h1>
+                <img src="img/dudych-on-bike.jpg" width="400px" height="300px" alt="dudych-on-bike">
             </p>
-            <p>
-                <img src="img/myphoto1.jpg" width="400px" height="300px" alt="nazar1">
-            </p>
-            <p>
-                <h1 class="dots">&#8230;</h1>
-            </p>
+            <p class="dots">&#8230;</p>
         </div>    
     </div>
-    <div class="contactme">
+    <footer class="contactme">
         <div class="contacttext">
             <h2>CONTACT ME</h2>
             <h1 class="dots">&#8230;</h1>
@@ -47,8 +44,8 @@
             <br>Lviv, Ukraine   
             <br>+380634667878
             <p>dunazar21@gmail.com</p>
-            <button class="buttonwrite">WRITE TO ME</button>
+            <button class="buttonwrite"><a href="write-to-me.html">WRITE TO ME</a></button>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
