--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>MY PHOTOS</h2>
             <p class="dots">&#8230;</p>
             <p>
-                <img src="img/dudych-on-bike.jpg" width="400px" height="300px" alt="dudych-on-bike">
+                <img src="img/dudych-on-bike.jpg" alt="dudych-on-bike" class="dudych-on-bike">
             </p>
             <p class="dots">&#8230;</p>
         </div>    
