--- a/information-about-me.html
+++ b/information-about-me.html
@@ -27,7 +27,7 @@
     <div>
         <p class="dots">&#8230;</p>
         <p>
-            <img src="img/dudych-near-airport.jpg" width="400 px" height="300 px" alt="dudych-near-airport">
+            <img src="img/dudych-near-airport.jpg" alt="dudych-near-airport">
         </p>
         <p class="dots">&#8230;</p>
     </div>
@@ -42,7 +42,7 @@
     <div>
         <p class="dots">&#8230;</p>
         <p>
-            <img src="img/dudych-in-kiev.jpg" width="400px" height="400px" alt="dudych-in-kiev">
+            <img src="img/dudych-in-kiev.jpg" alt="dudych-in-kiev">
         </p>
         <p class="dots">&#8230;</p>
     </div>
