--- a/index.html
+++ b/index.html
@@ -5,17 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Web Site</title>
-    <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="img/logo.jpg" type="images/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="website-home">
+  <a class="navbar-brand" href="#">MY WEB</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto" align="left">
+      <li class="nav-item active">
+        <a class="nav-link" href="#website-home">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#website-aboutme">About me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#website-myphotos">My photos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#website-contactme">Contact me</a>
+      </li>
+    </ul>
+  </div>
+</nav>
     <header>
         <div class="header-text" >
             <h1>MY WEBSITE</h1>
             <h3>Hello, I'm Nazar. This is my web site.</h3>
         </div>
     </header>
-    <div class="aboutme">
+    <div class="aboutme" id="website-aboutme">
         <div class="abouttext">
             <h2>ABOUT ME</h2>
             <p class="dots">&#8230;</p>
@@ -26,17 +50,30 @@
             <button class="button"><a href="information-about-me.html">More information</a></button>
         </div>    
     </div>
-    <div class="myphotos">
-        <div class="photostext">
-            <h2>MY PHOTOS</h2>
-            <p class="dots">&#8230;</p>
-            <p>
-                <img src="img/dudych-on-bike.jpg" alt="dudych-on-bike" class="dudych-on-bike">
-            </p>
-            <p class="dots">&#8230;</p>
-        </div>    
+    <div class="myphotos" id="website-myphotos">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="" alt="First slide">
     </div>
-    <footer class="contactme">
+    <div class="carousel-item">
+      <img class="d-block w-100" src="" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>    
+    </div>
+    <footer class="contactme" id="website-contactme">
         <div class="contacttext">
             <h2>CONTACT ME</h2>
             <h1 class="dots">&#8230;</h1>
@@ -47,5 +84,11 @@
             <button class="buttonwrite"><a href="write-to-me.html">WRITE TO ME</a></button>
         </div>
     </footer>
+    <script
+  src="http://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
