--- a/information-about-me1.html
+++ b/information-about-me1.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Web Site</title>
+    <title>More Information</title>
     <link rel="icon" href="img/logo.jpg" type="images/x-icon">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/information-about-me.css">
+    
 </head>
 <body>
-  <div class="website-home">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="website-home">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="website-home">
   <a class="navbar-brand" href="#">MY WEB</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto" align="left">
       <li class="nav-item active">
@@ -34,7 +33,6 @@
     </ul>
   </div>
 </nav>
-</div>
     <header class="header-informationaboutme">
         <h1 class="informationaboutme">MORE INFORMATION ABOUT ME</h1>
         <p class="dots"> &#8230; </p>
@@ -72,7 +70,7 @@
         </p>
         <p class="dots">&#8230;</p>
     </div>
-    <script
+     <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
