--- a/index.html
+++ b/index.html
@@ -18,23 +18,14 @@
 
   <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto" align="left">
-      <li class="nav-item active">
-        <a class="nav-link" href="#website-home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#website-aboutme">About me</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#website-myphotos">My photos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#website-contactme">Contact me</a>
-      </li>
+      <li class="nav-item active"> <a class="nav-link" href="#website-home">Home <span class="sr-only">(current)</span></a> </li> 
+      <li class="nav-item"> <a class="nav-link" href="#website-aboutme">About me</a> </li>
+      <li class="nav-item"> <a class="nav-link" href="#website-contactme">Contact me</a> </li>
     </ul>
   </div>
 </nav>
-    <header>
-        <div class="header-text" >
+    <header class="header-text">
+        <div>
             <h1>MY WEBSITE</h1>
             <h3>Hello, I'm Nazar. This is my web site.</h3>
         </div>
@@ -50,29 +41,32 @@
             <button class="button"><a href="information-about-me.html">More information</a></button>
         </div>    
     </div>
-    <div class="myphotos" id="website-myphotos">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="" alt="First slide">
+      <img class="d-block w-100" src="img/mountain.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="" alt="Second slide">
+      <img class="d-block w-100" src="img/newzeland.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="" alt="Third slide">
+      <img class="d-block w-100" src="img/earth.jpg" alt="Third slide">
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>    
-    </div>
+</div>
     <footer class="contactme" id="website-contactme">
         <div class="contacttext">
             <h2>CONTACT ME</h2>
@@ -85,7 +79,7 @@
         </div>
     </footer>
     <script
-  src="http://code.jquery.com/jquery-3.3.1.min.js"
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
