--- a/write-to-me.html
+++ b/write-to-me.html
@@ -5,12 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/write-to-me.css">
     <link rel="icon" href="img/logo.jpg" type="images/x-icon">
 </head>
 <body>
-    <div>
-        <h1 class="writetome">WRITE TO ME</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="website-home">
+  <a class="navbar-brand" href="#">MY WEB</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto" align="left">
+      <li class="nav-item active"> <a class="nav-link" href="#website-home">Home <span class="sr-only">(current)</span></a> </li> 
+      <li class="nav-item"> <a class="nav-link" href="index.html">Back</a> </li> 
+    </ul>
+  </div>
+</nav>
+    <div class="writetome">
+        <h1>WRITE TO ME</h1>
     </div>
     <div>
         <form method="POST" action="https://formspree.io/dunazar21@gmail.com">
@@ -27,10 +41,15 @@
                 <input type="tel" name="your-phone" id="your-phone" placeholder="380634667877" pattern="[0-9]{12}">
             </div>
             <div>
-                <input type="submit" class="submit-reset">
-                <input type="reset" class="submit-reset">
+                <input type="submit" class="submit-reset"><input type="reset" class="submit-reset">
             </div>
         </form>    
     </div>
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
